# wt-learn-opengl

./: .gitignore  README.md
example-first-project/: meson.build
example-first-project/src/: main.cpp
example-hello-triangle/: meson.build
example-hello-triangle/src/: main.cpp
example-hello-triangle/src/ext/glad/include/glad/: glad.h
example-hello-triangle/src/ext/glad/src/: glad.c
exercises/5.8/1-two-triangles-one-window/: Makefile  meson.build
